fix logo in footer to have z-index of 1

--- a/src/css/components/Hero.css
+++ b/src/css/components/Hero.css
@@ -71,7 +71,6 @@
   pointer-events: none;
   will-change: transform, opacity;
   transform: translate3d(0, 0, 0);
-  top: -5rem;
 }
 
 .hero h1,
